--- a/src/SimplCommerce.Infrastructure/SimplCommerce.Infrastructure.csproj
+++ b/src/SimplCommerce.Infrastructure/SimplCommerce.Infrastructure.csproj
@@ -9,12 +9,13 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="6.0.0" />
-    <PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="6.0.0" />
-    <PackageReference Include="Humanizer" Version="2.11.10" />
-    <PackageReference Include="MediatR" Version="7.0.0" />
-    <PackageReference Include="cloudscribe.Web.Pagination" Version="2.1.11" />
+    <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="6.0.3" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="6.0.3" />
+    <PackageReference Include="Humanizer" Version="2.14.1" />
+    <PackageReference Include="MediatR" Version="10.0.1" />
+    <PackageReference Include="cloudscribe.Web.Pagination" Version="5.0.0" />
     <PackageReference Include="ncrontab" Version="3.3.1" />
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
   </ItemGroup>
 
 </Project>
