eRede callback payment

--- a/src/SimplCommerce.WebHost/appsettings.json
+++ b/src/SimplCommerce.WebHost/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=127.0.0.1;Port=8822;Database=SimplCommerce;Userid=pgadmin;Password='hvyc}Ybc-}C)Kh*/r@y;'"
+    "DefaultConnection": "Server=127.0.0.1;Port=8822;Database=MySimplCommerce;Userid=pgadmin;Password='hvyc}Ybc-}C)Kh*/r@y;'"
   },
   "Authentication": {
     "Facebook": {
