Scroll to top, filters moved to offcanvas, carrousel font-weight, media social css

--- a/src/SimplCommerce.WebHost/SimplCommerce.WebHost.csproj
+++ b/src/SimplCommerce.WebHost/SimplCommerce.WebHost.csproj
@@ -13,6 +13,10 @@
     </ItemGroup>
 
     <ItemGroup>
+      <None Remove="wwwroot\themes\FlorDeZaya\js\site.js" />
+    </ItemGroup>
+
+    <ItemGroup>
         <ProjectReference Include="..\Modules\SimplCommerce.Module.ActivityLog\SimplCommerce.Module.ActivityLog.csproj" />
         <ProjectReference Include="..\Modules\SimplCommerce.Module.Catalog\SimplCommerce.Module.Catalog.csproj" />
         <ProjectReference Include="..\Modules\SimplCommerce.Module.Cms\SimplCommerce.Module.Cms.csproj" />
